changes schema a bit
