# src/Catrobat/AppBundle/Controller/Api/schemas/ApiRegisterModel.php
@@ -9,14 +9,8 @@ use Swagger\Annotations as SWG;
  *   type="object",
  *   )
  */
-class APIRegisterModel extends APIDefaultModel
+class ApiRegisterModel extends ApiMessageModel
 {
-  /**
-   * @SWG\Property(example="This is not the answer you are looking for!")
-   * @var string
-   */
-  protected $answer;
-
   /**
    * @SWG\Property(example=" ae2b1fca515949e5d54fb22b8ed95575")
    * @var string
